# CTrader

./: .gitmodules  CMakeLists.txt  README.md  settings.yaml
cmake/: curl.cmake  decimal_for_cpp.cmake  glew.cmake  glfw3.cmake  googletest.cmake  nlohmann_json.cmake  yaml_cpp.cmake
libCTrader/: Api.cpp  Api.h  Auth.cpp  Auth.h  types.cpp
libCTrader/include/libCTrader/: Api.h  Auth.h  Client.h  Decimal.h  Websock.h  types.h
libCTrader/src/: Api.cpp  Auth.cpp  Client.cpp  Decimal.cpp  Websock.cpp  types.cpp
src/: MaxQueue.h  Settings.cpp  Settings.h  Widgets.h  main.cpp
src/Widgets/: Performance.cpp  Performance.h
src/widgets/: Account.cpp  Account.h  Accounts.cpp  Accounts.h  OrderBook.cpp  OrderBook.h  Orders.cpp  Orders.h  Performance.cpp  Performance.h  PriceCharts.cpp  PriceCharts.h  PriceGraph.cpp  PriceGraph.h  ProductInfo.cpp  ProductInfo.h  Ticker.cpp  Ticker.h  TradeHistory.cpp  TradeHistory.h  WatchList.cpp  WatchList.h
tests/: CMakeLists.txt
tests/src/: mock_Auth.h  mock_Client.h  test_Api.cpp  test_Auth.cpp  tests.cpp
